src-ken&y/objects/Requisition__c.object
<CustomObject>
    <customHelpPage>HelpRequisitions</customHelpPage>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Authorization</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_Street__c</fullName>
        <label>Deliver To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deliver_To_City__c</fullName>
        <label>Deliver To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Country__c</fullName>
        <label>Deliver To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_State__c</fullName>
        <label>Deliver To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Street__c</fullName>
        <description>DEPRECATED because the  type should be Text Area.</description>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Zip_Code__c</fullName>
        <label>Deliver To Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_City__c</fullName>
        <formula>Ship_To_Customer__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Country__c</fullName>
        <formula>Ship_To_Customer__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_State__c</fullName>
        <formula>Ship_To_Customer__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street__c</fullName>
        <formula>Ship_To_Customer__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip_Code__c</fullName>
        <formula>Ship_To_Customer__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOB Term</label>
        <referenceTo>FOB_Terms__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>MRP</fullName>
                </value>
                <value>
                    <fullName>Back To Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Requisitions</relationshipLabel>
        <relationshipName>Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Requisition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Requisition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>FOB_Term__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requisition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Past_Transaction_Date</fullName>
        <active>true</active>
        <errorConditionFormula>(
    (ISNEW() || ISCHANGED(Transaction_Date__c)) 
    &amp;&amp;
    Transaction_Date__c &lt; DATEVALUE(NOW())
)</errorConditionFormula>
        <errorDisplayField>Transaction_Date__c</errorDisplayField>
        <errorMessage>Transaction Date cannot be set to a past date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Validation</fullName>
        <active>true</active>
        <description>Currently Requisitions only supports the type: &quot;Purchase Requisition&quot;</description>
        <errorConditionFormula>NOT(ISPICKVAL(Type__c,&apos;Purchase Requisition&apos;))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Requisitions only supports the type: &quot;Purchase Requisition&quot;</errorMessage>
    </validationRules>
</CustomObject>